@@ -43,3 +43,6 @@
 - Fix channel mod adding placeholder text
 - Fix channel mod user adding callback bug
 - Improve priviledge checking
+
+# 20240511
+- View global admin TEST Draft
